# wh04-3rd-1team-VoCabulary

./: .pdm-python  1. 프로젝트 기획서.docx  2. 요구사항 정의서.xlsx  3. WBS.xlsx  4. 모델정의서.pptx  README.md  db_utils.py  keyword.py  main.py  pyproject.toml
data/API_json/: api_sample_1.json  api_sample_10.json  api_sample_100.json  api_sample_101.json  api_sample_11.json  api_sample_12.json  api_sample_13.json  api_sample_14.json  api_sample_15.json  api_sample_16.json  api_sample_17.json  api_sample_18.json  api_sample_19.json  api_sample_2.json  api_sample_20.json  api_sample_21.json  api_sample_22.json  api_sample_23.json  api_sample_24.json  api_sample_25.json  api_sample_26.json  api_sample_27.json  api_sample_28.json  api_sample_29.json  api_sample_3.json  api_sample_30.json  api_sample_31.json  api_sample_32.json  api_sample_33.json  api_sample_34.json  api_sample_35.json  api_sample_36.json  api_sample_37.json  api_sample_38.json  api_sample_39.json  api_sample_4.json  api_sample_40.json  api_sample_41.json  api_sample_42.json  api_sample_43.json  (+61 more)
data/STT_json/: stt_sample_1.json  stt_sample_10.json  stt_sample_100.json  stt_sample_101.json  stt_sample_11.json  stt_sample_12.json  stt_sample_13.json  stt_sample_14.json  stt_sample_15.json  stt_sample_16.json  stt_sample_17.json  stt_sample_18.json  stt_sample_19.json  stt_sample_2.json  stt_sample_20.json  stt_sample_21.json  (+85 more)
original/: 1_consulting.py  1_dashboard.py  4_client_ex.py  6_report.py  8_dashborad.py
pages/: .pdm-python  2_consulting.py  3_consulting_detail.py  4_client.py  5_report.py  pyproject.toml
